feat: adding link to source in docs

--- a/design-toolkit/components/src/components/accordion/accordion.docs.mdx
+++ b/design-toolkit/components/src/components/accordion/accordion.docs.mdx
@@ -96,8 +96,13 @@ The `Accordion` component accepts `ReactNode` children or a function that return
 * **`className`** - Additional CSS classes for custom styling
 
 ## Implementation Notes
-The `Accordion` component wraps the `Disclosure` component from `react-aria-components`. [Disclosure Docs](https://react-spectrum.adobe.com/react-spectrum/Disclosure.html)
+The `Accordion` component wraps the `Disclosure` component from `react-aria-components`.
+
+[Disclosure Docs](https://react-spectrum.adobe.com/react-spectrum/Disclosure.html)
+
 [Disclosure Group Docs](https://react-spectrum.adobe.com/react-aria/DisclosureGroup.html)
+
+[Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/accordion)
 
 The component automatically handles accessibility features including:
 - ARIA attributes for screen readers
