--- a/design-toolkit/components/src/components/avatar/avatar.docs.mdx
+++ b/design-toolkit/components/src/components/avatar/avatar.docs.mdx
@@ -96,6 +96,10 @@ Context provider component that allows setting default props for multiple Avatar
 The main avatar component that renders the profile picture, fallback, and optional overlay content.
 
 ## Implementation Notes
-The `Avatar` component wraps the `Avatar`, `Image`, and `Fallback` components from `@radix-ui/react-avatar`. [Docs](https://www.radix-ui.com/primitives/docs/components/avatar)
+The `Avatar` component wraps the `Avatar`, `Image`, and `Fallback` components from `@radix-ui/react-avatar`.
+
+[Docs](https://www.radix-ui.com/primitives/docs/components/avatar)
+
+[Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/avatar)
 
 The avatar uses CSS Grid for precise positioning of the image, fallback, and content overlay. The fallback automatically displays when an image fails to load, and the component integrates seamlessly with the Badge component for status indicators and notifications.
