--- a/design-toolkit/components/src/components/badge/badge.docs.mdx
+++ b/design-toolkit/components/src/components/badge/badge.docs.mdx
@@ -63,6 +63,8 @@ The Badge component accepts all standard HTML span attributes
 ## Implementation Notes
 The `Badge` component is built with Tailwind CSS and uses CSS custom properties for dynamic positioning and offset calculations.
 
+[Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/badge)
+
 The component accepts all standard HTML span attributes and forwards them to the underlying element.
 
 The underlying elements are:
