--- a/design-toolkit/components/src/components/checkbox/checkbox.docs.mdx
+++ b/design-toolkit/components/src/components/checkbox/checkbox.docs.mdx
@@ -47,7 +47,11 @@ The Checkbox supports all the `Checkbox` [props and events from `react-aria-comp
 All checkbox types accept standard HTML input attributes and forward them to the underlying elements.
 
 ## Implementation Notes
-The `Checkbox` component wraps the `Checkbox` component from `react-aria-components`. [Docs](https://react-spectrum.adobe.com/react-spectrum/Checkbox.html)
+The `Checkbox` component wraps the `Checkbox` component from `react-aria-components`.
+
+[Docs](https://react-spectrum.adobe.com/react-spectrum/Checkbox.html)
+
+[Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/checkbox)
 
 The component includes state management that handles:
 - Selected state with checkmark icon
