--- a/design-toolkit/components/src/components/chip/chip.docs.mdx
+++ b/design-toolkit/components/src/components/chip/chip.docs.mdx
@@ -132,7 +132,11 @@ It is composed of the following components:
 All chip types accept standard HTML attributes and forward them to the underlying elements.
 
 ## Implementation Notes
-The `Chip` component wraps the `Tag` component from `react-aria-components`. [Docs](https://react-spectrum.adobe.com/react-spectrum/Tag.html)
+The `Chip` component wraps the `Tag` component from `react-aria-components`.
+
+[Docs](https://react-spectrum.adobe.com/react-spectrum/Tag.html)
+
+[Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/chip)
 
 The underlying elements are:
 - `div` for basic chips
