--- a/design-toolkit/components/src/components/classification-badge/classification-badge.docs.mdx
+++ b/design-toolkit/components/src/components/classification-badge/classification-badge.docs.mdx
@@ -83,6 +83,8 @@ The component accepts all standard HTML span attributes and forwards them to the
 ## Implementation Notes
 The `ClassificationBadge` component is built with Tailwind CSS and Tailwind Variants (tv) for flexible styling and variant management.
 
+[Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/classification-badge)
+
 The underlying elements are:
 - `span` for the classification badge container with appropriate ARIA attributes
 - Text content or default text based on variant
