--- a/design-toolkit/components/src/components/classification-banner/classification-banner.docs.mdx
+++ b/design-toolkit/components/src/components/classification-banner/classification-banner.docs.mdx
@@ -90,6 +90,8 @@ The component accepts all standard HTML div attributes and forwards them to the 
 ## Implementation Notes
 The `ClassificationBanner` component is built with Tailwind CSS and Tailwind Variants (tv) for flexible styling and variant management.
 
+[Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/classification-banner)
+
 The underlying elements are:
 - `div` for the classification banner container with appropriate ARIA attributes
 - Text content or default text based on variant
