--- a/design-toolkit/components/src/components/details-list/details-list.docs.mdx
+++ b/design-toolkit/components/src/components/details-list/details-list.docs.mdx
@@ -88,6 +88,8 @@ Values can contain complex React components, not just text, allowing for rich co
 ## Implementation Notes
 The `DetailsList` component is built using React Aria Components and provides a semantic HTML structure with proper accessibility features.
 
+[Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/details-list)
+
 Key features:
 - **Semantic HTML**: Uses `<dl>`, `<dt>`, and `<dd>` elements for proper document structure
 - **CSS Grid Layout**: Responsive two-column layout that automatically adjusts to content
