--- a/design-toolkit/components/src/components/dialog/dialog.docs.mdx
+++ b/design-toolkit/components/src/components/dialog/dialog.docs.mdx
@@ -122,6 +122,8 @@ const MyComponent = () => {
 ## Implementation Notes
 The `Dialog` component is built on top of React Aria Components, specifically wrapping the `Dialog`, `Modal`, and `ModalOverlay` components. [React Aria Dialog Docs](https://react-spectrum.adobe.com/react-spectrum/Dialog.html)
 
+[Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/dialog)
+
 Key features:
 - **Accessibility**: Full ARIA compliance with proper focus management and screen reader support
 - **Portal Management**: Automatic portal creation with support for custom parent containers
