--- a/design-toolkit/components/src/components/hero/hero.docs.mdx
+++ b/design-toolkit/components/src/components/hero/hero.docs.mdx
@@ -103,6 +103,8 @@ The component supports multiple subtitle elements, making it perfect for display
 ## Implementation Notes
 The `Hero` component is built using React Aria Components and provides a semantic, accessible hero section with flexible layout options.
 
+[Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/hero)
+
 Key features:
 - **Semantic HTML**: Uses `<header>` element with proper heading hierarchy
 - **Automatic Layout**: Automatically switches between stack and grid layouts
