--- a/design-toolkit/components/src/components/hotkey/hotkey.docs.mdx
+++ b/design-toolkit/components/src/components/hotkey/hotkey.docs.mdx
@@ -49,7 +49,11 @@ Wrapping the `+` or `or` interstitial marks in a `span` is optional.
 <Canvas of={HotkeyStories.KeysSet} />
 
 ## Implementation Notes
-The `Hotkey` component wraps the `Keyboard` component from `react-aria-components`. [Docs](https://react-spectrum.adobe.com/react-spectrum/Keyboard.html#keyboard) -->
+The `Hotkey` component wraps the `Keyboard` component from `react-aria-components`.
+
+[Docs](https://react-spectrum.adobe.com/react-spectrum/Keyboard.html#keyboard)
+
+[Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/hotkey)
 
 The underlying element is a `kbd` HTML element. [Docs](https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Elements/kbd) -->
 
