--- a/design-toolkit/components/src/components/icon/icon.docs.mdx
+++ b/design-toolkit/components/src/components/icon/icon.docs.mdx
@@ -153,6 +153,8 @@ The Icon component uses CSS custom properties for consistent sizing across the d
 ## Implementation Notes
 The `Icon` component is built using React Aria Components and provides a flexible, accessible icon system with consistent sizing and styling.
 
+[Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/icon)
+
 Key features:
 - **Consistent Sizing**: Automatic size application based on props or provider context
 - **Flexible Styling**: Custom class names and CSS custom properties for theming
