--- a/design-toolkit/components/src/components/input/input.docs.mdx
+++ b/design-toolkit/components/src/components/input/input.docs.mdx
@@ -150,6 +150,10 @@ Supports all standard HTML input types with appropriate styling:
 ## Implementation Notes
 The `Input` component is built on top of React Aria Components and provides enhanced functionality beyond standard HTML inputs.
 
+[Docs](https://react-spectrum.adobe.com/react-aria/TextField.html#input)
+
+[Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/input)
+
 Key features:
 - **Accessibility**: Full ARIA compliance with proper focus management and screen reader support
 - **Auto-sizing**: Intelligent width adjustment based on content length
