--- a/design-toolkit/components/src/components/label/label.docs.mdx
+++ b/design-toolkit/components/src/components/label/label.docs.mdx
@@ -165,6 +165,10 @@ The Label component provides several accessibility enhancements:
 ## Implementation Notes
 The `Label` component is built using React Aria Components and provides semantic, accessible form labeling with automatic state management.
 
+[Docs](https://react-spectrum.adobe.com/react-aria/TextField.html#label)
+
+[Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/label)
+
 Key features:
 - **Semantic Structure**: Proper `<label>` element with correct HTML semantics
 - **Automatic Indicators**: Built-in optional/required text handling
