--- a/design-toolkit/components/src/components/link/link.docs.mdx
+++ b/design-toolkit/components/src/components/link/link.docs.mdx
@@ -154,6 +154,10 @@ Customize visited link appearance:
 ## Implementation Notes
 The `Link` component is built on React Aria Components' `Link` and provides enhanced functionality for modern web applications.
 
+[Docs](https://react-spectrum.adobe.com/react-aria/Link.html)
+
+[Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/link)
+
 Key Features:
 - **Accessibility**: Full ARIA support, keyboard navigation, and screen reader compatibility
 - **State Management**: Optional visited state tracking with customizable styling
