--- a/design-toolkit/components/src/components/menu/menu.docs.mdx
+++ b/design-toolkit/components/src/components/menu/menu.docs.mdx
@@ -144,5 +144,9 @@ The Menu.Trigger component supports all the [props from `react-aria-components` 
 
 ## Implementation Notes
 
-The `Menu` component is based on the `Menu` component from `react-aria-components`. [Docs](https://react-spectrum.adobe.com/react-aria/Menu.html) -->
+The `Menu` component is based on the `Menu` component from `react-aria-components`.
+
+[Docs](https://react-spectrum.adobe.com/react-aria/Menu.html) -->
+
+[Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/menu)
 
