--- a/design-toolkit/components/src/components/options/options.docs.mdx
+++ b/design-toolkit/components/src/components/options/options.docs.mdx
@@ -209,6 +209,10 @@ interface OptionsDataItem {
 ## Implementation Notes
 The `Options` component is built using React Aria Components and provides a comprehensive, accessible options interface with flexible content organization.
 
+[Docs](https://react-spectrum.adobe.com/react-aria/ListBox.html)
+
+[Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/options)
+
 Key features:
 - **Accessibility**: Full ARIA compliance with proper focus management and screen reader support
 - **Flexible Layout**: Support for both static and dynamic content rendering
