--- a/design-toolkit/components/src/components/popover/popover.docs.mdx
+++ b/design-toolkit/components/src/components/popover/popover.docs.mdx
@@ -242,6 +242,10 @@ The Popover component is ideal for:
 ## Implementation Notes
 The `Popover` component is built using React Aria Components and provides a flexible, accessible popover system with comprehensive positioning and content management.
 
+[Docs](https://react-spectrum.adobe.com/react-aria/Popover.html)
+
+[Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/popover)
+
 Key features:
 - **Accessibility**: Full ARIA compliance with proper focus management and screen reader support
 - **Flexible Positioning**: Multiple placement options with automatic positioning
