--- a/design-toolkit/components/src/components/query-builder/query-builder.docs.mdx
+++ b/design-toolkit/components/src/components/query-builder/query-builder.docs.mdx
@@ -103,5 +103,6 @@ The QueryBuilder consists of several subcomponents that can be composed together
 - [React Query Builder Documentation](https://react-querybuilder.js.org/)
 - [Standard Toolkit Button Component](/docs/components-button--docs)
 - [Standard Toolkit Icon Component](/docs/components-icon--docs)
+- [Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/query-builder)
 
 <Controls of={QueryBuilderStories.Default} />
