--- a/design-toolkit/components/src/components/radio/radio.docs.mdx
+++ b/design-toolkit/components/src/components/radio/radio.docs.mdx
@@ -52,7 +52,11 @@ The orientation can be controlled via the `orientation` prop on the `Radio.Group
   * `label` - Applied to the radio option label
 
 ## Implementation Notes
-The `Radio` component wraps the `Radio` and `RadioGroup` components from `react-aria-components`. [Docs](https://react-spectrum.adobe.com/react-spectrum/RadioGroup.html)
+The `Radio` component wraps the `Radio` and `RadioGroup` components from `react-aria-components`.
+
+[Docs](https://react-spectrum.adobe.com/react-spectrum/RadioGroup.html)
+
+[Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/radio)
 
 The underlying elements are:
 - `div` for the radio group container
