--- a/design-toolkit/components/src/components/select-field/select-field.docs.mdx
+++ b/design-toolkit/components/src/components/select-field/select-field.docs.mdx
@@ -74,7 +74,11 @@ The size can be controlled via the `size` prop or set globally using the `Select
   * `error` - Applied to the error message
 
 ## Implementation Notes
-The `SelectField` component wraps the `Select` component from `react-aria-components`. [Docs](https://react-spectrum.adobe.com/react-spectrum/Select.html)
+The `SelectField` component wraps the `Select` component from `react-aria-components`.
+
+[Docs](https://react-spectrum.adobe.com/react-spectrum/Select.html)
+
+[Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/search-field)
 
 The underlying elements are:
 - `div` for the select field container
