--- a/design-toolkit/components/src/components/sidenav/sidenav.docs.mdx
+++ b/design-toolkit/components/src/components/sidenav/sidenav.docs.mdx
@@ -153,4 +153,6 @@ The Sidenav component implements the following accessibility features:
 ### Default Sidenav
 <Canvas of={SidenavStories.Default} />
 
+[Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/sidenav)
+
 
