--- a/design-toolkit/components/src/components/skeleton/skeleton.docs.mdx
+++ b/design-toolkit/components/src/components/skeleton/skeleton.docs.mdx
@@ -49,6 +49,8 @@ The component accepts all standard HTML div attributes and forwards them to the 
 ## Implementation Notes
 The `Skeleton` component is a simple, lightweight component built with Tailwind CSS and Tailwind Variants (tv).
 
+[Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/skeleton)
+
 The underlying element is a `div` with:
 - Base styling including light foreground color, transparent background, and padding
 - Pulse animation for visual feedback during loading states
