--- a/design-toolkit/components/src/components/slider/slider.docs.mdx
+++ b/design-toolkit/components/src/components/slider/slider.docs.mdx
@@ -85,7 +85,11 @@ It is composed of the following components:
 * **`onChange`** - Callback when range values change
 
 ## Implementation Notes
-The `Slider` component wraps the `Slider` component from `react-aria-components`. [Docs](https://react-spectrum.adobe.com/react-spectrum/Slider.html)
+The `Slider` component wraps the `Slider` component from `react-aria-components`.
+
+[Docs](https://react-spectrum.adobe.com/react-spectrum/Slider.html)
+
+[Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/slider)
 
 The underlying elements are:
 - `div` for the slider container with grid-based layout
