--- a/design-toolkit/components/src/components/tabs/tabs.docs.mdx
+++ b/design-toolkit/components/src/components/tabs/tabs.docs.mdx
@@ -156,3 +156,11 @@ function ControlledTabs() {
     </Tabs>
   );
 }
+```
+## Implementation Details
+
+Tabs uses React Aria's `Tabs` component for its implementation.
+
+[Docs](https://react-spectrum.adobe.com/react-aria/Tabs.html)
+
+[Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/tabs)
