--- a/design-toolkit/components/src/components/tooltip/tooltip.docs.mdx
+++ b/design-toolkit/components/src/components/tooltip/tooltip.docs.mdx
@@ -83,7 +83,11 @@ The Tooltip component has a single visual variant that automatically adapts base
 * **`className`** - Additional CSS classes for custom styling
 
 ## Implementation Notes
-The `Tooltip` component wraps the `Tooltip` and `TooltipTrigger` components from `react-aria-components`. [Docs](https://react-spectrum.adobe.com/react-spectrum/Tooltip.html)
+The `Tooltip` component wraps the `Tooltip` and `TooltipTrigger` components from `react-aria-components`.
+
+[Docs](https://react-spectrum.adobe.com/react-spectrum/Tooltip.html)
+
+[Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/tooltip)
 
 The underlying elements are:
 - `div` for the tooltip trigger wrapper
