--- a/design-toolkit/components/src/components/tree/tree.docs.mdx
+++ b/design-toolkit/components/src/components/tree/tree.docs.mdx
@@ -315,7 +315,11 @@ The Tree component automatically applies appropriate ARIA attributes to ensure s
 
 ## Implementation Notes
 
-The `Tree` is build on the React Aria Tree headless component. [Docs](https://react-spectrum.adobe.com/react-aria/Tree.html).
+The `Tree` is build on the React Aria Tree headless component.
+
+[Docs](https://react-spectrum.adobe.com/react-aria/Tree.html)
+
+[Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/tree)
 
 Note that because we require specialized management of `Tree` state, we have omitted some of the default React Aria props.
 
