--- a/design-toolkit/components/src/components/view-stack/view-stack.docs.mdx
+++ b/design-toolkit/components/src/components/view-stack/view-stack.docs.mdx
@@ -119,6 +119,8 @@ The most important prop for the ViewStack.Trigger is `for`. This dictates it's b
 ## Implementation Notes
 To guarantee uniqueness of ids across an application, the ViewStack implements Tagged UUID strings. This is also validated and will throw an error if a non-UUID is passed in.
 
+[Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/view-stack)
+
 Key features:
 - **Global Event System**: Triggers work from anywhere in the application
 - **Stack Management**: Automatic push/pop operations with history
