--- a/design-toolkit/components/src/components/button/button.docs.mdx
+++ b/design-toolkit/components/src/components/button/button.docs.mdx
@@ -88,6 +88,8 @@ Context provider component that allows setting default props for multiple Button
 The `Button` component wraps the `Button` component from `react-aria-components`. [Docs](https://react-spectrum.adobe.com/react-spectrum/Button.html)
 The `ToggleButton` component wraps the `ToggleButton` component from `react-aria-components`. [Docs](https://react-spectrum.adobe.com/react-aria/ToggleButton.html)
 
+[Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/avatar)
+
 The underlying elements are:
 - `button` for standard buttons
 - `a` for link buttons
