--- a/design-toolkit/components/src/components/color-picker/color-picker.docs.mdx
+++ b/design-toolkit/components/src/components/color-picker/color-picker.docs.mdx
@@ -109,7 +109,11 @@ const colorObjects = [
 The component accepts all standard HTML div attributes and forwards them to the underlying element.
 
 ## Implementation Notes
-The `ColorPicker` component wraps the `ColorSwatchPicker` component from `react-aria-components`. [Docs](https://react-spectrum.adobe.com/react-spectrum/ColorSwatchPicker.html)
+The `ColorPicker` component wraps the `ColorSwatchPicker` component from `react-aria-components`.
+
+[Docs](https://react-spectrum.adobe.com/react-spectrum/ColorSwatchPicker.html)
+
+[Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/color-picker)
 
 The underlying elements are:
 - `div` for the color picker container with grid layout
