feat: replace incorrect links

--- a/design-toolkit/components/src/components/button/button.docs.mdx
+++ b/design-toolkit/components/src/components/button/button.docs.mdx
@@ -85,7 +85,7 @@ Context provider component that allows setting default props for multiple Button
 ```
 
 ## Implementation Notes
-The `Button` component wraps the `Button` component from `react-aria-components`. [Docs](https://react-spectrum.adobe.com/react-spectrum/Button.html)
+The `Button` component wraps the `Button` component from `react-aria-components`. [Docs](https://react-spectrum.adobe.com/react-aria/Button.html)
 The `ToggleButton` component wraps the `ToggleButton` component from `react-aria-components`. [Docs](https://react-spectrum.adobe.com/react-aria/ToggleButton.html)
 
 [Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/avatar)
