--- a/design-toolkit/components/src/components/checkbox/checkbox.docs.mdx
+++ b/design-toolkit/components/src/components/checkbox/checkbox.docs.mdx
@@ -49,7 +49,7 @@ All checkbox types accept standard HTML input attributes and forward them to the
 ## Implementation Notes
 The `Checkbox` component wraps the `Checkbox` component from `react-aria-components`.
 
-[Docs](https://react-spectrum.adobe.com/react-spectrum/Checkbox.html)
+[Docs](https://react-spectrum.adobe.com/react-aria/Checkbox.html)
 
 [Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/checkbox)
 
