--- a/design-toolkit/components/src/components/chip/chip.docs.mdx
+++ b/design-toolkit/components/src/components/chip/chip.docs.mdx
@@ -134,7 +134,7 @@ All chip types accept standard HTML attributes and forward them to the underlyin
 ## Implementation Notes
 The `Chip` component wraps the `Tag` component from `react-aria-components`.
 
-[Docs](https://react-spectrum.adobe.com/react-spectrum/Tag.html)
+[Docs](https://react-spectrum.adobe.com/react-aria/Tag.html)
 
 [Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/chip)
 
