--- a/design-toolkit/components/src/components/dialog/dialog.docs.mdx
+++ b/design-toolkit/components/src/components/dialog/dialog.docs.mdx
@@ -120,7 +120,7 @@ const MyComponent = () => {
 ```
 
 ## Implementation Notes
-The `Dialog` component is built on top of React Aria Components, specifically wrapping the `Dialog`, `Modal`, and `ModalOverlay` components. [React Aria Dialog Docs](https://react-spectrum.adobe.com/react-spectrum/Dialog.html)
+The `Dialog` component is built on top of React Aria Components, specifically wrapping the `Dialog`, `Modal`, and `ModalOverlay` components. [React Aria Dialog Docs](https://react-spectrum.adobe.com/react-aria/Dialog.html)
 
 [Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/dialog)
 
