--- a/design-toolkit/components/src/components/hotkey/hotkey.docs.mdx
+++ b/design-toolkit/components/src/components/hotkey/hotkey.docs.mdx
@@ -51,7 +51,7 @@ Wrapping the `+` or `or` interstitial marks in a `span` is optional.
 ## Implementation Notes
 The `Hotkey` component wraps the `Keyboard` component from `react-aria-components`.
 
-[Docs](https://react-spectrum.adobe.com/react-spectrum/Keyboard.html#keyboard)
+[Docs](https://react-spectrum.adobe.com/react-aria/Keyboard.html#keyboard)
 
 [Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/hotkey)
 
