--- a/design-toolkit/components/src/components/select-field/select-field.docs.mdx
+++ b/design-toolkit/components/src/components/select-field/select-field.docs.mdx
@@ -76,7 +76,7 @@ The size can be controlled via the `size` prop or set globally using the `Select
 ## Implementation Notes
 The `SelectField` component wraps the `Select` component from `react-aria-components`.
 
-[Docs](https://react-spectrum.adobe.com/react-spectrum/Select.html)
+[Docs](https://react-spectrum.adobe.com/react-aria/Select.html)
 
 [Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/search-field)
 
