--- a/design-toolkit/components/src/components/slider/slider.docs.mdx
+++ b/design-toolkit/components/src/components/slider/slider.docs.mdx
@@ -87,7 +87,7 @@ It is composed of the following components:
 ## Implementation Notes
 The `Slider` component wraps the `Slider` component from `react-aria-components`.
 
-[Docs](https://react-spectrum.adobe.com/react-spectrum/Slider.html)
+[Docs](https://react-spectrum.adobe.com/react-aria/Slider.html)
 
 [Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/slider)
 
