--- a/design-toolkit/components/src/components/switch/switch.docs.mdx
+++ b/design-toolkit/components/src/components/switch/switch.docs.mdx
@@ -72,7 +72,7 @@ The component accepts all standard HTML label attributes and forwards them to th
 ## Implementation Notes
 The `Switch` component wraps the `Switch` component from `react-aria-components`.
 
-[Docs](https://react-spectrum.adobe.com/react-spectrum/Switch.html)
+[Docs](https://react-spectrum.adobe.com/react-aria/Switch.html)
 
 [Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/switch)
 
