--- a/design-toolkit/components/src/components/tooltip/tooltip.docs.mdx
+++ b/design-toolkit/components/src/components/tooltip/tooltip.docs.mdx
@@ -85,7 +85,7 @@ The Tooltip component has a single visual variant that automatically adapts base
 ## Implementation Notes
 The `Tooltip` component wraps the `Tooltip` and `TooltipTrigger` components from `react-aria-components`.
 
-[Docs](https://react-spectrum.adobe.com/react-spectrum/Tooltip.html)
+[Docs](https://react-spectrum.adobe.com/react-aria/Tooltip.html)
 
 [Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/tooltip)
 
