--- a/design-toolkit/components/src/components/combobox-field/combobox-field.docs.mdx
+++ b/design-toolkit/components/src/components/combobox-field/combobox-field.docs.mdx
@@ -195,6 +195,6 @@ The underlying HTML structure creates a semantic form field with proper accessib
 
 The component wraps the `ComboBox` component from `react-aria-components`.
 
-[Docs](https://react-spectrum.adobe.com/react-spectrum/ComboBox.html)
+[Docs](https://react-spectrum.adobe.com/react-aria/ComboBox.html)
 
 [Github Source](https://github.com/gohypergiant/standard-toolkit/tree/main/design-toolkit/components/src/components/combobox-field)
