feat: ensure classNames shapes are documented

--- a/design-toolkit/components/src/components/dialog/dialog.docs.mdx
+++ b/design-toolkit/components/src/components/dialog/dialog.docs.mdx
@@ -56,6 +56,10 @@ It is composed of the following components:
 - **`isOpen`** - Controlled open state for the dialog
 - **`onOpenChange`** - Callback when the open state changes
 - **`parentRef`** - Reference to a parent element for custom portal placement
+- **`classNames`** - Object containing custom class names for different parts:
+  - `overlay` - Overlay container
+  - `modal` - Modal container
+  - `dialog` - Dialog container
 
 ### Dialog.Body Props
 - **`children`** - Render function that receives dialog context including `close` function
