--- a/design-toolkit/components/src/components/drawer/drawer.docs.mdx
+++ b/design-toolkit/components/src/components/drawer/drawer.docs.mdx
@@ -74,6 +74,11 @@ The Drawer.Menu.Item component represents individual navigation items within the
 - **`for`** - The unique identifier fo the view this item should navigate to
 - **`toggle`** - When `true`, the menu item will toggle the visibility of the associated view instead of just opening it
 - **`textValue`** - Optional text that will be displayed in a tooltip when hovering over the menu item
+- **`classNames`** - Optional class names for custom styling of the item and tooltip
+  - `item` - Class name applied to the menu item
+  - `tooltip` - Class name applied to the tooltip
+
+When `textValue` is provided, a tooltip will appear on hover, enhancing accessibility and user experience.
 
 ## Drawer.View
 
