docs: ✏️ correct props

--- a/design-toolkit/components/src/components/breadcrumbs/breadcrumbs.docs.mdx
+++ b/design-toolkit/components/src/components/breadcrumbs/breadcrumbs.docs.mdx
@@ -17,8 +17,8 @@ It is composed of the following components:
 ### Basic
 ```
 <Breadcrumbs>
-  <Breadcrumbs.Item href="/">Home</Breadcrumbs.Item>
-  <Breadcrumbs.Item href="/projects">Projects</Breadcrumbs.Item>
+  <Breadcrumbs.Item linkProps={{ href: '/ ' }}>Root</Breadcrumbs.Item>
+  <Breadcrumbs.Item linkProps={{ href: '/home' }}>Child</Breadcrumbs.Item>
   <Breadcrumbs.Item>Project Phoenix</Breadcrumbs.Item>
 </Breadcrumbs>
 ```
